NXP-25837: Format + cleanup